Changes in version 0.5
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Added the '--build-root' option to the debug, list and test commands.
  This allows executing test programs from a different directory than
  where the Kyuafile scripts live.  See the 'Build roots' section in the
  manual for more details.

* Fixed the build when using a "build directory" and a clean source tree
  from the repository.

* Removed the kyuaify.sh script.  This has been renamed to atf2kyua and
  moved to the kyua-atf-compat module, where it ships as a first-class
  utility (with a manual page and tests).


Changes in version 0.4
======================

Experimental version released on June 6th, 2012.

* Added the 'report-html' command to generate HTML reports of the
  execution of any recorded action.

* Changed the '--output' flag of the 'report' command to only take a
  path to the target file, not its format.  Different formats are better
  supported by implementing different subcommands, as the options they
  may receive will vary from format to format.

* Added a '--with-atf' flag to the configure script to control whether
  the ATF tests get built or not.  May be useful for packaging systems
  that do not have ATF in them yet.  Disabling ATF also cuts down the
  build time of Kyua significantly, but with the obvious drawbacks.

* Grouped 'kyua' subcommands by topic both in the output of 'help' and
  in the documentation.  In general, the user needs to be aware of
  commands that rely on a current project and those commands that rely
  purely on the database to generate reports.

* Made 'help' print the descriptions of options and commands properly
  tabulated.

* Changed most informational messages to automatically wrap on screen
  boundaries.

* Rewrote the configuration file parsing module for extensibility.  This
  will allow future versions of Kyua to provide additional user-facing
  options in the configuration file.
